crates/pcb-zen-core/tests/snapshots/symbol__symbol_duplicate_pad_error.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Error: test.zen:6:7-11:2 Pad 'A1' is already assigned to signal 'SCL'
