crates/pcb-zen-core/tests/snapshots/symbol__symbol_empty_pad_list.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Error: test.zen:6:7-10:2 Pad list for signal 'SCL' cannot be empty
