crates/pcb-zen-core/tests/snapshots/symbol__symbol_from_library_with_name.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Symbol { name: "Symbol2", pins: { "2": "B" } }
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
