crates/pcb-zen-core/tests/snapshots/symbol__symbol_invalid_definition_format.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Error: test.zen:6:7-10:2 Pad names must be a list
