crates/pcb-zen-core/tests/snapshots/symbol__symbol_positional_empty_name.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Error: test.zen:6:7-32 Symbol '' not found in library '/test.kicad_sym'. Available symbols: TestSymbol
