crates/pcb-zen-core/tests/snapshots/symbol__symbol_positional_invalid_type.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Error: test.zen:6:7-18 Positional argument must be a string
