crates/pcb-zen-core/tests/snapshots/symbol__symbol_positional_library_name.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
GND symbol: Symbol { name: "GND", pins: { "1": "GND" } }
VCC symbol: Symbol { name: "VCC", pins: { "1": "VCC" } }
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
