crates/pcb-zen-core/tests/snapshots/symbol__symbol_positional_library_only.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Symbol: Symbol { name: "SingleSymbol", pins: { "1": "IN" } }
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
