crates/pcb-zen-core/tests/snapshots/symbol__symbol_positional_multiple_colons.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Symbol: Symbol { name: "TestSymbol", pins: { "1": "A" } }
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
