crates/pcb-zen-core/tests/snapshots/symbol__symbol_positional_with_named_conflict.snap
---
source: crates/pcb-zen-core/tests/symbol.rs
expression: output
---
Error: test.zen:6:7-60 Cannot specify both positional 'library:name' argument and named 'library' or 'name' parameters
